WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242239
REGRESSION(
251359@main
) Subtitles in PiP and Fullscreen are blank
https://bugs.webkit.org/show_bug.cgi?id=242239
Summary
REGRESSION(251359@main) Subtitles in PiP and Fullscreen are blank
Kimmo Kinnunen
Reported
2022-07-01 03:52:22 PDT
REGRESSION(
251359@main
) Subtitles in PiP and Fullscreen are blank Taking a <video> with subtitles into fullscreen or picture-in-picture mode on iOS (or PiP on macOS) results in a blank subtitle representation. Steps To Reproduce: 1.
https://jernoble.github.io/samples/bin/WebVTT/file-styling.html
2. Enter fullscreen 3. Note a lack of subtitles Regression: Regressed by
https://trac.webkit.org/changeset/295343/webkit
bug 241127
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-07-01 03:52:47 PDT
<
rdar://96254698
>
Kimmo Kinnunen
Comment 2
2022-07-01 04:49:04 PDT
https://github.com/WebKit/WebKit/pull/1988
EWS
Comment 3
2022-07-06 15:37:42 PDT
Committed
252193@main
(bf1f57bf41dd): <
https://commits.webkit.org/252193@main
> Reviewed commits have been landed. Closing PR #1988 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug