REGRESSION(251359@main) Subtitles in PiP and Fullscreen are blank https://bugs.webkit.org/show_bug.cgi?id=242239

Reviewed by Simon Fraser.

ImageBuffer::sinkToImage() would call ImageBuffer::drawConsuming() with the
srcRect = FloatRect { 0, 0, -1, -1 } with the intention that it would mean
to use the full source size. This intention was derived from the drawConsuming
srcRect default argument. In reality, this would be a no-op.

Fix by using the explicit source size.
Also remove the ImageBuffer::drawConsuming() and ImageBuffer::draw() default
arguments, as those would render the calls no-ops.

Add tests for ImageBuffer::sinkToImage() for all testable configurations.

* Source/WebCore/platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::sinkIntoImage):
* Source/WebCore/platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::draw):
(WebCore::ImageBuffer::drawConsuming):
* Tools/TestWebKitAPI/TestUtilities.h:
(WebCore::operator<<):
* Tools/TestWebKitAPI/Tests/WebCore/ImageBufferTests.cpp:
(TestWebKitAPI::imageBufferPixelIs):
(TestWebKitAPI::hasTestPattern):
(TestWebKitAPI::drawTestPattern):
(TestWebKitAPI::TEST):
(TestWebKitAPI::PrintTo):
(TestWebKitAPI::PreserveResolutionOperationTest::deviceScaleFactor const):
(TestWebKitAPI::PreserveResolutionOperationTest::imageBufferOptions const):
(TestWebKitAPI::PreserveResolutionOperationTest::operationPreserveResolution):
(TestWebKitAPI::TEST_P):

Canonical link: https://commits.webkit.org/252193@main